# guten

./: .gitignore  CMakeLists.txt  Guten.sln  README.md  index.md
Guten/: AlignedView.cpp  AlignedView.h  BlockBar.cpp  BlockChar.cpp  BlockChar.h  Boarder.cpp  Boarder.h  CMakeLists.txt  Character.cpp  Character.h  CheckerBoard.cpp  CheckerBoard.h  Color.cpp  Color.h  ColorHelpers.cpp  ColorHelpers.h  ColoredChar.cpp  ColoredChar.h  ConstrainedLayout.cpp  ConstrainedLayout.h  DrawFunctions.cpp  DrawFunctions.h  FlatSpinner.cpp  FlatSpinner.h  Glyphs.cpp  Glyphs.h  GridView.cpp  GridView.h  Guten.cpp  Guten.h  Guten.vcxproj  Guten.vcxproj.filters  GutenExports.cpp  GutenExports.h  HorizontalView.cpp  HorizontalView.h  Letter.cpp  Letter.h  LineChar.cpp  LineChar.h  (+34 more)
Guten/bars/: BlockBar.cpp  ProgressBar.h
Guten/blocks/: BlockChar.h
Guten/boarders/: Boarder.cpp
Guten/boards/: CheckerBoard.cpp  CheckerBoard.h
Guten/color/: Color.cpp  Color.h  ColorHelpers.cpp  ColorHelpers.h  iocolor.cpp  iocolor.h
Guten/core/: Character.cpp  Character.h  ColoredChar.cpp  ColoredChar.h  Matrix.cpp  Matrix.h  Size.cpp  helpers.cpp  helpers.h
Guten/draw/: DrawFunctions.cpp  DrawFunctions.h
Guten/glyphs/: Glyphs.h  Letter.cpp  Letter.h
Guten/lines/: LineChar.cpp
Guten/spinners/: FlatSpinner.cpp  LineSpinner.cpp  SpinnerBase.h
Guten/termcolor/: termcolor.hpp
Guten/view/: ConstrainedLayout.cpp  ConstrainedLayout.h  GridView.cpp  HorizontalView.cpp  HorizontalView.h  LinearLayout.cpp  LinearLayout.h  TextView.cpp  VerticalView.cpp  ViewGroup.cpp
GutenDriver/: DrawFunctions.txt  GutenDriver.vcxproj  GutenDriver.vcxproj.filters  Letters.txt  Matrix.txt  ProgressBars.txt  Source.cpp  examples.cpp  examples.h  examples_boarders.cpp  examples_boarders.h  examples_checker_board.cpp  examples_checker_board.h  examples_draw_functions.cpp  examples_draw_functions.h  examples_glyphs.cpp  examples_glyphs.h  examples_progress_bar.cpp  examples_progress_bar.h  termcolor.txt
bars/: BlockBar.h
blocks/: BlockChar.cpp
boarders/: Boarder.h
core/: Point.h  Size.h
glyphs/: Glyphs.cpp  Letter.h
guten/: GutenExports.cpp  framework.h  guten.hpp
guten/bars/: ProgressBar.cpp
guten/color/: Color.h
guten/core/: ColoredChar.h  Matrix.cpp  Matrix.h  Point.cpp
guten/draw/: DrawFunctions.cpp  DrawFunctions.h
guten/lines/: LineChar.h
guten/spinners/: LineSpinner.h  SpinnerBase.cpp
guten/view/: AlignedView.cpp  AlignedView.h  RelativeLayout.h  View.cpp  View.h  ViewGroup.h
lines/: LineChar.h
view/: GridView.cpp  GridView.h  RelativeLayout.cpp  TextView.h  VerticalView.h
