cmake_minimum_required(VERSION 3.20)

set (HEADER_FILES
	AlignedView.h
	BlockBar.h
	BlockChar.h
	Boarder.h
	Character.h
	CheckerBoard.h
	ColoredChar.h
	Color.h
	ColorHelpers.h
	ConstrainedLayout.h
	DrawFunctions.h
	FlatSpinner.h
	framework.h
	Glyphs.h
	GridView.h
	GutenExports.h
	helpers.h
	HorizontalView.h
	iocolor.h
	Letter.h
	LinearLayout.h
	LineChar.h
	LineSpinner.h
	Matrix.h
	pch.h
	Point.h
	ProgressBar.h
	RelativeLayout.h
	Size.h
	SpinnerBase.h
	TextView.h
	VerticalView.h
	ViewGroup.h
	View.h
)

set (SOURCE_FILES 
	AlignedView.cpp
	BlockBar.cpp
	BlockChar.cpp
	Boarder.cpp
	Character.cpp
	CheckerBoard.cpp
	Color.cpp
	ColoredChar.cpp
	ColorHelpers.cpp
	ConstrainedLayout.cpp
	dllmain.cpp
	DrawFunctions.cpp
	FlatSpinner.cpp
	Glyphs.cpp
	GridView.cpp
	GutenExports.cpp
	helpers.cpp
	HorizontalView.cpp
	iocolor.cpp
	Letter.cpp
	LinearLayout.cpp
	LineChar.cpp
	LineSpinner.cpp
	Matrix.cpp
	pch.cpp
	Point.cpp
	ProgressBar.cpp
	RelativeLayout.cpp
	Size.cpp
	SpinnerBase.cpp
	TextView.cpp
	VerticalView.cpp
	View.cpp
	ViewGroup.cpp
)

add_library(guten STATIC 
	${HEADER_FILES}
	${SOURCE_FILES}
)